# ChineseViewer-v1

./: .gitignore  Pipfile  README.md  app.py  pyproject.toml  requirements.txt  runserver.py
ChineseViewer/: blueprints.py  sentence.py  tts.py  util.py  vocab.py
ChineseViewer/static/css/: clipboard.css
ChineseViewer/static/js/: hanzi.js  vocab.js
ChineseViewer/templates/: clipboard.html  vocab.html
ChineseViewer/views/: item.py
chineseviewer/: __init__.py  blueprints.py  tts.py
chineseviewer/static/js/: clipboard.js  common.js  hanzi.js
chineseviewer/templates/: hanzi.html
chineseviewer/views/: hanzi.py  item.py  utils.py  vocab.py
webapp/: __init__.py
webapp/static/css/: common.css
webapp/static/js/: clipboard.js  common.js  hanzi.js  vocab.js
webapp/templates/: clipboard.html  hanzi.html  template.html
webapp/views/: hanzi.py  item.py  utils.py  vocab.py
