[tool.poetry]
name = "ChineseViewer"
version = "0.3.0.1"
description = "A Hanzi and vocab viewer for a chunk of text, based on HanziLevelUp."
authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/patarapolw/ChineseViewer"
homepage = "https://github.com/patarapolw/ChineseViewer"
keywords = ['chinese', 'hanzi', 'tts', 'gtts', 'hanzi-level-project', 'radicals']

[tool.poetry.dependencies]
python = ">=3"
flask = "^1.0"
wordfreq = "^2.1"
requests = "^2.19"
bs4 = "^0.0.1"
jieba = "^0.39.0"
gtts = "^2.0"
regex = "=2018.02.21"
gunicorn = "^19.9"
cjkradlib = "^0.1.2"
hanzilvlib = "^0.1.2"

[tool.poetry.dev-dependencies]
